updated in featureY

--- a/station.html
+++ b/station.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            STATION TO STATION
+            source to destination
         </title>
     <style>
         .station{
