updated in style_change

--- a/station.html
+++ b/station.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            STATION TO Destination
+            STATION TO Destination along station name
         </title>
     <style>
         .station{
